--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/frontend/public/mobile-payment_4765439.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dev ke Papa</title>
+    <title>Payments App</title>
   </head>
   <body>
     <div id="root"></div>
